<resources>
    <string name="app_name">User</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //Log in page
    <string name="logHeader">Welcome Back!</string>
    <string name="logEmail">Email Address</string>
    <string name="logPwd">Password</string>
    <string name="logSignTxt">Sign in</string>
    <string name="logOr">or</string>
    <string name="logSignUpTxt">Sign Up</string>

    //Register page
    <!--    <string name="app_name">Registration Form</string>-->
    <string name="SignUp">Customer Registration.</string>
    <string name="subHeader">Register for our rental service here...</string>
    <string name="username">User Name</string>
    <string name="name">User Name</string>
    <string name="email">Email Address</string>
    <string name="mobileNo">Mobile Number</string>
    <string name="Address">postalAddress</string>
    <string name="address">Postal Address</string>
    <string name="IDNumber">NIC No</string>
    <string name="Password">Password</string>
    <string name="confirmPwd">Re-Enter Password</string>
    <string name="signUp">Register Now </string>
    <string name="signUpTxt">Register Now</string>

    //Profile
    <!--    <string name="app_name">Profile</string>-->
    <string name="userNanme">Malith Iroshan</string>
    <!--    //<string name="email">Email Address</string>-->
    <string name="emailView">malith@outlook.com</string>
    <string name="MobileNo">Mobile Number</string>
    <string name="MobileView">0779999999</string>
    <string name="IdNo">NIC No</string>
    <string name="NicView">20000183723</string>
    <!--   // <string name="address">Postal Address</string>-->
    <string name="addressView">Chilaw Road, Madampe</string>
    <string name="pwd">Password</string>
    <string name="pwdView">**************</string>
    <string name="profileBtnBooking">My Booking</string>
    <string name="profileEditBtn">Edit Profile</string>

    //Edit Profile

    <string name="eProfilename">User Name</string>
    <string name="nameView">Malith Iroshan</string>
    <string name="Email">Email Address</string>
    <!--    <string name="emailView">malith@outlook.com</string>-->
    <string name="eMobileNo">Mobile Number</string>
    <string name="NoView">077999999</string>
    <string name="EIDNumber">NIC No</string>
    <!--    <string name="NicView">199952656</string>-->
    <string name="Eaddress">Postal Address</string>
    <!--    <string name="addressView">Chilaw Road,New Town,Madampe</string>-->
    <string name="Epwd">Password</string>
    <!--    <string name="pwdView">*************************</string>-->
    <string name="btnUpdate">Update Details</string>
    <string name="btnDelete">Delete Profile</string>


    <string name="regDir">Continues As..</string>
    <string name="vshop">View Shop</string>


    //Booking
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="selected_date">Selected Date:</string>
    <string name="selected_date2">Selected Date:</string>
    <string name="book_now">Book Now</string>
    <string name="selected_date1">selected_date</string>
    <string name="selected_time">Selected time</string>
    <string name="button_text_style">bold</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="dropoff_time">Drop off Time</string>
    <string name="total_cost">Total Cost : </string>
    <string name="edit">Edit</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    //Payment
    <string name="title_value">Payment Details</string>
    <string name="mode_title">Select payment mode</string>
    <string name="mode_titlecrddetaails">Card details</string>
    <string name="Crddetailstitle">Card Details</string>
    <string name="crd_number_value">Card number</string>
    <string name="name_on_crd_value">Name on card</string>
    <string name="ttlAmout_value">Rs. 6856</string>
    <string name="btn_value_paynow">Pay Now</string>
    <string name="ttlAmout_title">Total Amount</string>
    <string name="savebtn_valluue">Save</string>
    <string name="title_otp_value">Enter OTP</string>
    <string name="cnfrm_btn_value">CONFIRM</string>
    <string name="statname"><![CDATA[Bike & Tuk Rental]]></string>

</resources>