<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_payment"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_title"
        android:textColor="@color/accentOrng"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <RadioGroup
        android:id="@+id/radioG"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation='horizontal'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/add_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Visa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.011" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.011"
            app:srcCompat="@drawable/visa_36_675739" />

        <RadioButton
            android:id="@+id/add_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="American"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.011" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.017"
            app:srcCompat="@drawable/american_express_6_675747" />

        <RadioButton
            android:id="@+id/add_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Master"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.796"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.011" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.011"
            app:srcCompat="@drawable/mastercard_25_675722" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/Layoutid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioG"
        app:layout_constraintVertical_bias="0.118">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Crddetailstitle"
            android:textColor="@color/accentOrng"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/add_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/name_on_crd_value"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/add_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/crd_number_value"
            android:inputType="number"
            android:maxLength="16"
            android:minHeight="48dp" />

        <LinearLayout
            android:id="@+id/Layoutid2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/add_month"
                android:layout_width="100dp"
                android:layout_height="40dp" />

            <Spinner
                android:id="@+id/add_year"
                android:layout_width="200dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/add_card_ccv"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:hint="CVV"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />


        <EditText
            android:id="@+id/add_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Reason"
            android:inputType="textLongMessage"
            android:maxLength="16"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnColor"
        android:text="@string/btn_value_paynow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="272dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/ttlAmout_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layoutid"
        app:layout_constraintVertical_bias="0.682" />

    <TextView
        android:id="@+id/add_card_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ttlAmout_value"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/Layoutid"
        app:layout_constraintVertical_bias="0.679"
        tools:ignore="InvalidId" />

</androidx.constraintlayout.widget.ConstraintLayout>